--- a/WalkerGear/WalkerGear.csproj
+++ b/WalkerGear/WalkerGear.csproj
@@ -27,7 +27,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>..\1.5\Assemblies\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -36,6 +36,10 @@
     <Reference Include="HeavyWeapons">
       <HintPath>..\..\..\..\..\workshop\content\294100\2023507013\1.5\Assemblies\HeavyWeapons.dll</HintPath>
       <Private>False</Private>
+    </Reference>
+    <Reference Include="MVCF, Version=2.0.0.1, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\workshop\content\294100\2023507013\1.5\Assemblies\MVCF.dll</HintPath>
     </Reference>
     <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -54,7 +58,6 @@
     <Compile Include="DefOf\JobDefOf.cs" />
     <Compile Include="DefOf\SlotDefOf.cs" />
     <Compile Include="Defs\SlotDef.cs" />
-    <Compile Include="DummyPawn.cs" />
     <Compile Include="GUI\ITab_MechGear.cs" />
     <Compile Include="Job\JobDriver_GetOffWalkerCore.cs" />
     <Compile Include="Job\JobDriver_RepairThing.cs" />
@@ -66,6 +69,7 @@
     <Compile Include="Comp\CompUseEffect_GetIntoGear.cs" />
     <Compile Include="Comp\CompNoItemMode.cs" />
     <Compile Include="DefOf\ThingDefOf.cs" />
+    <Compile Include="VerbCompTurret.cs" />
     <Compile Include="WalkerGear_Core.cs" />
     <Compile Include="Comp\CompWalkerGearBuilding.cs" />
     <Compile Include="Defs\WalkerGearDef.cs" />
@@ -73,7 +77,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <LangVersion>9.0</LangVersion>
+    <LangVersion>10.0</LangVersion>
     <PublicizerClearCacheOnClean>true</PublicizerClearCacheOnClean>
     <!-- <PublicizeAll>true</PublicizeAll> -->
   </PropertyGroup>
@@ -87,12 +91,13 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Krafs.Rimworld.Ref">
-      <Version>1.5.4069</Version>
+      <Version>1.5.4085</Version>
     </PackageReference>
     <PackageReference Include="Lib.Harmony">
       <Version>2.3.3</Version>
     </PackageReference>
     <Publicize Include="Assembly-CSharp:Verse.Thing.rotationInt" />
     <Publicize Include="Assembly-CSharp:Verse.Projectile" />
+    <Publicize Include="Assembly-CSharp:RimWorld.CompApparelVerbOwner_Charged.remainingCharges" />
   </ItemGroup>
 </Project>
