--- a/WalkerGear/WalkerGear.csproj
+++ b/WalkerGear/WalkerGear.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Comp\PawnRenderSubWorker_Offset.cs" />
     <Compile Include="DefOf\ThingDefOf.cs" />
     <Compile Include="IHealthParms.cs" />
+    <Compile Include="ThingClass\BuildingWreckage.cs" />
     <Compile Include="ThingClass\Building_MaintenanceBay.cs" />
     <Compile Include="ThingClass\Building_Wreckage.cs" />
     <Compile Include="Comp\CompApparelForcedWeapon.cs" />
@@ -105,6 +106,8 @@
     <Compile Include="HarmonyPatches\Pawn_EquipmentTracker_Patch.cs" />
     <Compile Include="Resources.cs" />
     <Compile Include="MVCF_VerbComp\VerbCompTurret.cs" />
+    <Compile Include="ThingClass\StatPart_BodySize.cs" />
+    <Compile Include="ThingClass\StatPart_MoveSpeed.cs" />
     <Compile Include="ThingClass\WalkerGear_Core.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
