--- a/WalkerGear/WalkerGear.csproj
+++ b/WalkerGear/WalkerGear.csproj
@@ -34,14 +34,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="0Harmony">
-      <HintPath>..\..\Fortification-Industrial\Source\Reference\0Harmony.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Assembly-CSharp">
-      <HintPath>..\..\..\RimWorldWin64_Data\Managed\Assembly-CSharp.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
     <Reference Include="HeavyWeapons">
       <HintPath>..\..\..\..\..\workshop\content\294100\2023507013\1.5\Assemblies\HeavyWeapons.dll</HintPath>
       <Private>False</Private>
@@ -56,31 +48,17 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
-    <Reference Include="UnityEngine">
-      <HintPath>..\..\..\RimWorldWin64_Data\Managed\UnityEngine.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="UnityEngine.CoreModule">
-      <HintPath>..\..\..\RimWorldWin64_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="UnityEngine.IMGUIModule">
-      <HintPath>..\..\..\RimWorldWin64_Data\Managed\UnityEngine.IMGUIModule.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.TextCoreModule">
-      <HintPath>..\..\..\RimWorldWin64_Data\Managed\UnityEngine.TextCoreModule.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="UnityEngine.TextRenderingModule">
-      <HintPath>..\..\..\RimWorldWin64_Data\Managed\UnityEngine.TextRenderingModule.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
     <Reference Include="VFECore">
       <HintPath>..\..\..\..\..\workshop\content\294100\2023507013\1.5\Assemblies\VFECore.dll</HintPath>
       <Private>False</Private>
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Catapult\Building_EjectorBay.cs" />
+    <Compile Include="Catapult\CatapultUtility.cs" />
+    <Compile Include="Catapult\DMS_AbilityVerb_QuickJump.cs" />
+    <Compile Include="Catapult\DMS_PawnFlyer.cs" />
+    <Compile Include="Catapult\JobDriver_GetInEjector.cs" />
     <Compile Include="CompLaunchExhaust.cs" />
     <Compile Include="CompThrownFleckEmitter.cs" />
     <Compile Include="Comp\CompBuildingExtraRenderer.cs" />
